# RD

./: .gitignore  project_overview.drawio
examples/c_style_array_converter/: .gitignore  CMakeLists.txt  c_style_array_converter_tool.cpp  input_file.cpp  input_file.orig.cpp
examples/c_style_array_converter/example_project/: CMakeLists.txt  Printer.cpp  Printer.h
examples/enum_to_string/: enum_to_string.cpp  input_file.orig.cpp  time.sh
examples/enum_to_string/cmake/: functions.cmake
examples/enum_to_string_multi_step/: CMakeLists.txt  enum_to_string.cpp  enum_to_string_v3.cpp  input_file.orig.cpp  time.sh
examples/multiple_translation_units/: CMakeLists.txt  README.md  multiple_translation_units.cpp
examples/transformation_base_project/: .clang-format  CMakeLists.txt  input_file.orig.cpp  transformation_base_project.cpp
report/: Preamble.sty  TODO.md  frontpage.sty  main.tex  references.bib
report/010abstract/: 01abstract.tex
report/020introduction/: 01introduction.tex  01preface.tex  02abbreviations.tex
report/030background/: 01background.tex
report/040description/: 01description.tex
report/050methods/: 01methods.tex
report/060requirements/: 02functional.tex  03non_functional.tex
report/080development/: 010development.tex  020installation.tex  030build_env.tex  040tool_structure.tex  040transformer.tex  041matching_the_ast.tex  041transformer.tex  045tool_examples.tex
report/085tool_examples/: 010tool_examples.tex  020renaming_tool.tex  030cstyle_array.tex  035cstyle_array_params.tex  040enum_to_string.tex  040enum_to_string_gen.tex  050enum_to_string_sin.tex  060enum_to_string_mul.tex
report/090tests/: 01tests.tex
report/095discussion/: 010discussion.tex  020matching_vs_processing.tex  030cstyle_semantic_changes.tex  040enum_to_string.tex
report/100related_work/: 01related_work.tex
report/110conclusion/: 01conclusion.tex  02future_work.tex
(+3 files in other folders)
